@@ -1,45 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<exercise-list>
-    <exercise>
-        <id>1</id>
-        <sport-type-id>1</sport-type-id>
-        <sport-subtype-id>3</sport-subtype-id>
-        <date>2003-07-24T08:23:45</date>
-        <duration>11340</duration>
-        <intensity>LOW</intensity>
-        <distance>76.5</distance>
-        <avg-speed>26.3</avg-speed>
-        <avg-heartrate>132</avg-heartrate>
-        <ascent>670</ascent>
-        <calories>1280</calories>
-        <hrm-file>20030724082345.srd</hrm-file>
-        <equipment-id>2</equipment-id>
-        <comment>Rennrad-Tour DD-Stolpen-Radeberg-DD.</comment>
-    </exercise>
-    <exercise>
-        <id>2</id>
-        <sport-type-id>2</sport-type-id>
-        <sport-subtype-id>1</sport-subtype-id>
-        <date>2003-07-26T14:13:22</date>
-        <duration>4082</duration>
-        <intensity>INTERVALS</intensity>
-        <distance>9.5</distance>
-        <avg-speed>8.5</avg-speed>
-        <avg-heartrate>143</avg-heartrate>
-        <ascent>70</ascent>
-        <calories>943</calories>
-        <hrm-file>20030726141322.srd</hrm-file>
-        <comment>Laufen in der Heide.</comment>
-    </exercise>
-    <exercise>
-        <id>3</id>
-        <sport-type-id>1</sport-type-id>
-        <sport-subtype-id>1</sport-subtype-id>
-        <date>2003-07-27T13:20:00</date>
-        <duration>12640</duration>
-        <intensity>NORMAL</intensity>
-        <distance>61.5</distance>
-        <avg-speed>21.3</avg-speed>
-    </exercise>
-</exercise-list>
-
