@@ -1,19 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<note-list>
-    <note>
-        <id>1</id>
-        <date>2009-01-02T09:10:11</date>
-        <text>Note 1</text>
-    </note>
-    <note>
-        <id>2</id>
-        <date>2009-01-05T13:14:15</date>
-        <text>Note 2</text>
-    </note>
-    <note>
-        <id>3</id>
-        <date>2009-01-07T20:21:22</date>
-        <text>Note 3</text>
-    </note>
-</note-list>
-
